windows PC test

--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
         <h1 class="header_title">Блог о творчестве, спорте, и образе жизни</h1>
     </header>
     <div class="page">
+        <section class="trends">
+            <div class="trends__card"></div>
+            <div class="trends__card"></div>
+            <div class="trends__card"></div>
+            <div class="trends__card"></div>
+        </section>
         <main class="main_content">
             <article class="news_card">
                 <img src="https://netology-code.github.io/html-2-diploma/sources/images/last-post1.jpg" alt="фотография человека, идущего по пляжу" class="news_pic">
