trends block started

--- a/index.html
+++ b/index.html
@@ -27,13 +27,47 @@
         </div>
         <h1 class="header_title">Блог о творчестве, спорте, и образе жизни</h1>
     </header>
+    <section class="trends">
+        <h3 class="aside_title">сейчас в тренде</h3>
+        <div class="trends__cards-wrapper">
+            <div class="trends__card trends__card-background-one">
+                <div class="trends_text">
+                        <ul class="card_tags">
+                            <li class="card_tag"><a href="#0" class="tag_link">lifestyle</a></li>
+                            <li class="card_tag"><a href="#0" class="tag_link">interior</a></li>
+                        </ul>
+                        <h4 class="trends__card-title">Сейчас в тренде: сад  на подоконнике</h4>
+                </div>
+            </div>
+            <div class="trends__card trends__card-background-two">
+                <div class="trends_text">
+                        <ul class="card_tags">
+                            <li class="card_tag"><a href="#0" class="tag_link">FOOD</a></li>
+                        </ul>
+                        <h4 class="trends__card-title">сыры на красивых  картинках из интернета: какие они на вкус?</h4>
+                </div>
+            </div>
+            <div class="trends__card trends__card-background-three">
+                <div class="trends_text">
+                        <ul class="card_tags">
+                            <li class="card_tag"><a href="#0" class="tag_link">lifestyle</a></li>
+                            <li class="card_tag"><a href="#0" class="tag_link">travel</a></li>
+                        </ul>
+                        <h4 class="trends__card-title">СОБИРАЕМСЯ В ПЕРВЫЙ ПОХОД В ГОРЫ</h4>
+                </div>
+            </div>
+            <div class="trends__card trends__card-background-four">
+                <div class="trends_text">
+                        <ul class="card_tags">
+                            <li class="card_tag"><a href="#0" class="tag_link">food</a></li>
+                            <li class="card_tag"><a href="#0" class="tag_link">health</a></li>
+                        </ul>
+                        <h4 class="trends__card-title">Сейчас в тренде: сКОЛЬКО ВИТАМИНА c В ЛИМОНАХ?</h4>
+                </div>
+            </div>
+        </div>
+    </section>
     <div class="page">
-        <section class="trends">
-            <div class="trends__card"></div>
-            <div class="trends__card"></div>
-            <div class="trends__card"></div>
-            <div class="trends__card"></div>
-        </section>
         <main class="main_content">
             <article class="news_card">
                 <img src="https://netology-code.github.io/html-2-diploma/sources/images/last-post1.jpg" alt="фотография человека, идущего по пляжу" class="news_pic">
