trends section done

--- a/index.html
+++ b/index.html
@@ -28,43 +28,44 @@
         <h1 class="header_title">Блог о творчестве, спорте, и образе жизни</h1>
     </header>
     <section class="trends">
-        <h3 class="aside_title">сейчас в тренде</h3>
+        <h3 class="trends_title">сейчас в тренде</h3>
         <div class="trends__cards-wrapper">
-            <div class="trends__card trends__card-background-one">
+            <article class="trends__card trends__card-background-one">
                 <div class="trends_text">
                         <ul class="card_tags">
                             <li class="card_tag"><a href="#0" class="tag_link">lifestyle</a></li>
                             <li class="card_tag"><a href="#0" class="tag_link">interior</a></li>
                         </ul>
-                        <h4 class="trends__card-title">Сейчас в тренде: сад  на подоконнике</h4>
+                        <h4 class="trends__card-title"><a href="#0" class="trends__card-link">Сейчас в тренде: сад  на подоконнике</a></h4>
                 </div>
-            </div>
-            <div class="trends__card trends__card-background-two">
+            </article>
+            <article class="trends__card trends__card-background-two">
                 <div class="trends_text">
                         <ul class="card_tags">
                             <li class="card_tag"><a href="#0" class="tag_link">FOOD</a></li>
                         </ul>
-                        <h4 class="trends__card-title">сыры на красивых  картинках из интернета: какие они на вкус?</h4>
+                        <h4 class="trends__card-title"><a href="#0" class="trends__card-link">сыры на красивых  картинках из интернета: какие они на вкус?</a></h4>
                 </div>
-            </div>
-            <div class="trends__card trends__card-background-three">
+            </article>
+            <article class="trends__card trends__card-background-three">
                 <div class="trends_text">
                         <ul class="card_tags">
                             <li class="card_tag"><a href="#0" class="tag_link">lifestyle</a></li>
                             <li class="card_tag"><a href="#0" class="tag_link">travel</a></li>
                         </ul>
-                        <h4 class="trends__card-title">СОБИРАЕМСЯ В ПЕРВЫЙ ПОХОД В ГОРЫ</h4>
+                        <h4 class="trends__card-title"><a href="#0" class="trends__card-link">СОБИРАЕМСЯ В ПЕРВЫЙ ПОХОД В ГОРЫ</a></h4>
                 </div>
-            </div>
-            <div class="trends__card trends__card-background-four">
+            </article>
+            <article class="trends__card trends__card-background-four">
                 <div class="trends_text">
                         <ul class="card_tags">
                             <li class="card_tag"><a href="#0" class="tag_link">food</a></li>
                             <li class="card_tag"><a href="#0" class="tag_link">health</a></li>
                         </ul>
-                        <h4 class="trends__card-title">Сейчас в тренде: сКОЛЬКО ВИТАМИНА c В ЛИМОНАХ?</h4>
+                        <h4 class="trends__card-title"><a href="#0" class="trends__card-link">Сейчас в тренде: сКОЛЬКО ВИТАМИНА c В ЛИМОНАХ?</a></h4>
+
                 </div>
-            </div>
+            </article>
         </div>
     </section>
     <div class="page">
