shop section started

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <h1 class="header_title">Блог о творчестве, спорте, и образе жизни</h1>
     </header>
     <section class="trends">
-        <h3 class="trends_title">сейчас в тренде</h3>
+        <h3 class="section_title">сейчас в тренде</h3>
         <div class="trends__cards-wrapper">
             <article class="trends__card trends__card-background-one">
                 <div class="trends_text">
@@ -184,6 +184,76 @@
                         <p class="news_text">Узнаем основы проектирования новых пищевых и около-пищевых опытов, вскроем физику, химию и микробиологию еды.</p>
                 </div>
             </article>
+            <section class="shop">
+                <h3 class="section_title">Наши изделия</h3>
+                <div class="shop__wrapper">
+                    <article class="shop__card">
+                        <div class="shop__card-img_wrp">
+                            <picture>
+                                <source srcset="images/shop-item-desk1.jpg" media="(min-width: 1200px)">
+                                <source srcset="images/shop-item-tablet1.jpg" media="(min-width: 641px) and (max-width: 1199px)">
+                                <source srcset="images/shop-item-mobile1.jpg" media="(max-width: 640px)">
+                                <img class="shop__card-img" src="images/shop-item-desk1.jpg" alt="Розовая подушка на кресле">
+                            </picture>
+                        </div>
+                        <div class="shop__card-text_wrp">
+                            <h3 class="shop__card-title">Подушки на диван</h4>
+                            <div class="shop__card-text">
+                                <p class="shop__card-info">Набор из двух подушек с модными принтами. Видео о создании <a href="" class="shop__card-link">здесь</a>.</p>
+                            </div>
+                            <div class="shop__card-price">
+                                <p class="shop__card-old_price">1000 ₽</p>
+                                <p class="shop__card-new_price">800 ₽</p>
+                            </div>
+                            <a href="" class="shop__card-button">В магазин</a>
+                        </div>
+                    </article>
+                        <article class="shop__card">
+                            <div class="shop__card-img_wrp">
+                                <picture>
+                                    <source srcset="images/shop-item-desk2.jpg" media="(min-width: 1200px)">
+                                    <source srcset="images/shop-item-tablet2.jpg" media="(min-width: 641px) and (max-width: 1199px)">
+                                    <source srcset="images/shop-item-mobile2.jpg" media="(max-width: 640px)">
+                                    <img class="shop__card-img" src="images/shop-item-desk2.jpg" alt="Мягкая кукла в виде зайчика на столе с книжками">
+                                </picture>
+                            </div>
+                            <div class="shop__card-text_wrp">
+                                <h3 class="shop__card-title">Кукла «Зайчик»</h4>
+                                <div class="shop__card-text">
+                                    <p class="shop__card-info">Интерьерная рукодельная кукла «Зайчик», созданию которой посвящена<a href="" class="shop__card-link">весенняя серия постов</a> в блоге и
+                                        несколько подкастов.</p>
+                                </div>
+                                <div class="shop__card-price">
+                                    <p class="shop__card-old_price">3500 ₽</p>
+                                </div>
+                                <a href="" class="shop__card-button">В магазин</a>
+                            </div>
+                        </article>
+                            <article class="shop__card">
+                                <div class="shop__card-img_wrp">
+                                    <picture>
+                                        <source srcset="images/shop-item-desk3.jpg" media="(min-width: 1200px)">
+                                        <source srcset="images/shop-item-tablet3.jpg" media="(min-width: 641px) and (max-width: 1199px)">
+                                        <source srcset="images/shop-item-mobile3.jpg" media="(max-width: 640px)">
+                                        <img class="shop__card-img" src="images/shop-item-desk3.jpg" alt="Шестиугольная деревянная рамка на столе">
+                                    </picture>
+                                </div>
+                                <div class="shop__card-text_wrp">
+                                    <h3 class="shop__card-title">Шестиугольная рамка</h4>
+                                    <div class="shop__card-text">
+                                        <p class="shop__card-info">Необычная рамка для украшения дома из видео <a href="" class="shop__card-link">«Как сделать рамку из подручных
+                                        средств за 30 минут»</a>
+                                        </p>
+                                    </div>
+                                    <div class="shop__card-price">
+                                        <p class="shop__card-old_price">500 ₽</p>
+                                        <p class="shop__card-new_price">400 ₽</p>
+                                    </div>
+                                    <a href="" class="shop__card-button">В магазин</a>
+                                </div>
+                            </article>
+                </div>
+            </section>
         </main>
         <aside class="aside_wrapper">
             <section class="new_posts">
