--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
     </section>
     <div class="page">
         <main class="main_content">
+            <div class="news__wrapper">
             <article class="news_card">
                 <img src="https://netology-code.github.io/html-2-diploma/sources/images/last-post1.jpg" alt="фотография человека, идущего по пляжу" class="news_pic">
                 <div class="news_info">
@@ -184,6 +185,7 @@
                         <p class="news_text">Узнаем основы проектирования новых пищевых и около-пищевых опытов, вскроем физику, химию и микробиологию еды.</p>
                 </div>
             </article>
+        </div>
             <section class="shop">
                 <h3 class="section_title">Наши изделия</h3>
                 <div class="shop__wrapper">
@@ -254,7 +256,6 @@
                             </article>
                 </div>
             </section>
-        </main>
         <aside class="aside_wrapper">
             <section class="new_posts">
                 <h3 class="aside_title">новые посты</h3>
@@ -334,6 +335,7 @@
                 </ul>
             </section>
         </aside>
+    </main>
     </div>
     <footer class="footer">
         <div class="footer_wrapper">
