--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
     <div class="page">
         <main class="main_content">
             <div class="popup visible">
-                <div class="pupup__wrapper">
+                <div class="popup__wrapper">
                     <div class="popup__feedback">
-                        <h3 class="section__title"></h3>
+                        <h3 class="section_title">Ваш фидбек</h3>
                         <form class="feedback__forms">
                             <div class="feedback__form">
                                 <label class="form-label" for="question-select-id">Как часто вы заходите на сайт?</label>
