--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
             alt="лого"
             class="header_logo"/></a>
             <nav class="menu">
+                <button class="burger__menu">
+                    <span class="burger__menu-label">открыть меню</span>
+                </button>
                 <ul class="list">
                 <li class="menu_item"><a href="#0" class="menu_link">главная</a></li>
                 <li class="menu_item"><a href="#0" class="menu_link">посты</a></li>
@@ -70,7 +73,7 @@
     </section>
     <div class="page">
         <main class="main_content">
-            <div class="popup visible">
+            <div class="popup">
                 <div class="popup__wrapper">
                     <div class="popup__feedback">
                         <h3 class="section_title">Ваш фидбек</h3>
