--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <header class="header">
         <div class="header_container">
             <a href="#0" class="header_logo-link"><img
+            class="header_logo-pic"
             src="images/noemi-logo.png"
             alt="лого"
             class="header_logo"/></a>
