mobile adaptive started

--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
                 </ul>
             </nav>
         </div>
+        <a href="#0" class="header_logo-link-mobile"><img
+            class="header_logo-pic-mobile"
+            src="images/noemi-logo.png"
+            alt="лого"
+            class="header_logo"/></a>
         <h1 class="header_title">Блог о творчестве, спорте, и образе жизни</h1>
     </header>
     <section class="trends">
