--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <li class="menu_item"><a href="#0" class="menu_link">статьи</a></li>
                 <li class="menu_item"><a href="#0" class="menu_link">теги</a></li>
                 <li class="menu_item"><a href="#0" class="menu_link">темы</a></li>
-                <li class="menu_item"><a href="#0" class="menu_link">контакты</a></li>
+                <li class="menu_item"><a href="#0" class="menu_link menu_link-last">контакты</a></li>
                 </ul>
             </nav>
         </div>
@@ -119,7 +119,7 @@
             <div class="news__section">
                 <article class="news_card">
                     <img src="https://netology-code.github.io/html-2-diploma/sources/images/last-post1.jpg" alt="фотография человека, идущего по пляжу" class="news_pic">
-                    <div class="news_info">
+                    <div class="news_info news_card-border">
                         <ul class="card_tags">
                             <li class="card_tag"><a href="#0" class="tag_link">travel</a></li>
                             <li class="card_tag"><a href="#0" class="tag_link">health</a></li>
@@ -134,7 +134,7 @@
                 </article>
                 <article class="news_card">
                     <img src="https://netology-code.github.io/html-2-diploma/sources/images/last-post2.jpg" alt="женщина занимается йогой на пляже" class="news_pic">
-                    <div class="news_info">
+                    <div class="news_info news_card-border">
                         <ul class="card_tags">
                             <li class="card_tag"><a href="#0" class="tag_link">health</a></li>
                             <li class="card_tag"><a href="#0" class="tag_link">lifestyle</a></li>
@@ -150,7 +150,7 @@
                 </article>
                 <article class="news_card">
                     <img src="https://netology-code.github.io/html-2-diploma/sources/images/last-post3.jpg" alt="девушка на музыкальном концерте" class="news_pic">
-                    <div class="news_info">
+                    <div class="news_info news_card-border">
                         <ul class="card_tags">
                             <li class="card_tag"><a href="#0" class="tag_link">music</a></li>
                         </ul>
@@ -162,13 +162,13 @@
                         </div>
                         <div class="text_wrapper">
                             <p class="news_text">Лето на носу, а с ним и музыкальные фестивали. На каком же из них вы разобьёте свою палатку?</p>
-                            <p class="news_text">Мы составили список лучших летних фестивалей по всему миру.</p>
+                            <p class="news_text news_text-double">Мы составили список лучших летних фестивалей по всему миру.</p>
                         </div>
                     </div>
                 </article>
                 <article class="news_card">
                     <img src="https://netology-code.github.io/html-2-diploma/sources/images/last-post4.jpg" alt="еда в тарелках на столе" class="news_pic">
-                    <div class="news_info">
+                    <div class="news_info news_card-border">
                         <ul class="card_tags">
                             <li class="card_tag"><a href="#0" class="tag_link">lifestyle</a></li>
                             <li class="card_tag"><a href="#0" class="tag_link">food</a></li>
@@ -184,7 +184,7 @@
                 </article>
                 <article class="news_card">
                     <img src="https://netology-code.github.io/html-2-diploma/sources/images/last-post5.jpg" alt="фотография подушки с надписью на стуле" class="news_pic">
-                    <div class="news_info">
+                    <div class="news_info news_card-border">
                         <ul class="card_tags">
                             <li class="card_tag"><a href="#0" class="tag_link">lifestyle</a></li>
                             <li class="card_tag"><a href="#0" class="tag_link">interior</a></li>
@@ -201,7 +201,7 @@
                 </article>
                 <article class="news_card">
                     <img src="https://netology-code.github.io/html-2-diploma/sources/images/last-post6.jpg" alt="два человека на скале на фоне гор" class="news_pic">
-                    <div class="news_info">
+                    <div class="news_info news_card-border">
                         <ul class="card_tags">
                             <li class="card_tag"><a href="#0" class="tag_link">travel</a></li>
                             <li class="card_tag"><a href="#0" class="tag_link">lifestyle</a></li>
